--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ The above copyright notice and this permission notice shall be included in all c
                       </div>
                       <div class="card">
                         <div class="card-header card-header-primary">
-                          <h4 class="card-title">Add 1 Video & 1 Image of her with u</h4>
+                          <h4 class="card-title">Add 1 Image & 1 Video of her with you(Add Image First)</h4>
                           
                         </div>
                         <div class="wrapper2">
